# WritePolicyBench

./: .gitignore  LICENSE  README.md  pyproject.toml
data/episodes/: MANIFEST.json  episodes__mode=burst_drift__seed=0__steps=200__n=10.jsonl  episodes__mode=default__seed=0__steps=200__n=10.jsonl  episodes__mode=redundancy__seed=0__steps=200__n=10.jsonl  episodes__schema=priority_v1__mode=burst_drift__seed=0__steps=200__n=10.jsonl  episodes__schema=priority_v1__mode=burst_redundancy__seed=0__steps=200__n=10.jsonl  episodes__schema=priority_v1__mode=default__seed=0__steps=200__n=10.jsonl  episodes__schema=priority_v1__mode=redundancy__seed=0__steps=200__n=10.jsonl
docs/: ARXIV_RELEASE_CHECKLIST.md  BENCHMARK_SPEC.md  RUNBOOK.md  TEST_PLAN.md  WORKER_SESSIONS.md
scripts/: freeze_episodes.py  sanity_checks.py  summarize_results.py
tests/: test_merge_semantics.py  test_metrics.py
writepolicybench/: __main__.py  baselines.py  episode_io.py  episode_schema.py  evaluator.py  memory.py  metrics.py  policy.py  runner.py  synthetic.py
